--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>دردشة AI - إنستقرام كامل</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>دردشة AI</title>
 <style>
-body { margin: 0; font-family: Arial, sans-serif; background: #fafafa; display: flex; justify-content: center; align-items: center; height: 100vh; }
-#chat { width: 400px; height: 600px; border: 1px solid #ddd; border-radius: 15px; background: #fff; display: flex; flex-direction: column; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.2); }
-#messages { flex: 1; padding: 10px; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; }
+* { box-sizing: border-box; }
+body { margin: 0; font-family: Arial, sans-serif; background: #f0f2f5; display: flex; justify-content: center; align-items: center; height: 100vh; }
+
+#chat { width: 100%; max-width: 450px; height: 100%; max-height: 700px; border: 1px solid #ddd; border-radius: 15px; background: #fff; display: flex; flex-direction: column; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.2); }
+
+#messages { flex: 1; padding: 10px; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; scroll-behavior: smooth; }
 
 .message { display: flex; max-width: 80%; padding: 8px 12px; border-radius: 20px; position: relative; word-wrap: break-word; opacity: 0; transform: translateY(20px); animation: slideIn 0.3s forwards; }
 .user { background: #dcf8c6; align-self: flex-end; border-bottom-right-radius: 0; flex-direction: row-reverse; }
@@ -14,7 +18,7 @@ body { margin: 0; font-family: Arial, sans-serif; background: #fafafa; display: 
 
 .avatar { width: 32px; height: 32px; border-radius: 50%; margin: 0 8px; }
 .content { display: flex; flex-direction: column; }
-.text { margin-bottom: 4px; }
+.text { margin-bottom: 4px; word-break: break-word; }
 .time { font-size: 10px; color: #555; align-self: flex-end; }
 .message img { max-width: 200px; border-radius: 10px; margin-top: 5px; }
 
@@ -25,6 +29,10 @@ body { margin: 0; font-family: Arial, sans-serif; background: #fafafa; display: 
 #fileInput { display:none; }
 
 @keyframes slideIn { to { opacity: 1; transform: translateY(0); } }
+
+@media screen and (max-width: 500px) {
+  #chat { max-width: 100%; height: 100%; border-radius: 0; }
+}
 </style>
 </head>
 <body>
@@ -62,7 +70,6 @@ async function sendMessage() {
 
   let userContent = input.value;
 
-  // رسالة المستخدم
   const userMsg = document.createElement("div");
   userMsg.className = "message user";
   userMsg.innerHTML = `
@@ -77,27 +84,32 @@ async function sendMessage() {
   messages.scrollTop = messages.scrollHeight;
 
   const formData = { message: userContent };
-  const response = await fetch("/chat", {
-    method: "POST",
-    headers: {"Content-Type":"application/json"},
-    body: JSON.stringify(formData)
-  });
-  const data = await response.json();
+  try {
+    const response = await fetch("/chat", {
+      method: "POST",
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify(formData)
+    });
+    const data = await response.json();
 
-  // رسالة البوت
-  const botMsg = document.createElement("div");
-  botMsg.className = "message bot";
-  botMsg.innerHTML = `
-    <img class="avatar" src="${botAvatar}" alt="bot">
-    <div class="content">
-      <div class="text">${data.reply}</div>
-      <div class="time">${formatTime()}</div>
-    </div>
-  `;
-  messages.appendChild(botMsg);
-  messages.scrollTop = messages.scrollHeight;
+    const botMsg = document.createElement("div");
+    botMsg.className = "message bot";
+    botMsg.innerHTML = `
+      <img class="avatar" src="${botAvatar}" alt="bot">
+      <div class="content">
+        <div class="text">${data.reply}</div>
+        <div class="time">${formatTime()}</div>
+      </div>
+    `;
+    messages.appendChild(botMsg);
+    messages.scrollTop = messages.scrollHeight;
 
-  notifyUser(data.reply);
+    notifyUser(data.reply);
+
+  } catch (err) {
+    console.error(err);
+    alert("❌ خطأ في الاتصال بالسيرفر");
+  }
 
   input.value = "";
   fileInput.value = "";
